fix: adjust hero section positioning for better alignment

--- a/src/app/landing-page/sections/a-hero/a-hero.component.scss
+++ b/src/app/landing-page/sections/a-hero/a-hero.component.scss
@@ -64,11 +64,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-top: 20dvh;
-
-      @media (max-height: 900px ) {
-        padding-top: 10dvh;
-      }
+      position: absolute;
+      top: calc(50% - 98px);
+      transform: translateY(-50%);
 
       .job {
         font-family: "Fira", monospace;
